Add google authentication button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,4 +12,7 @@
 <body style="margin: 0">
   <app-root></app-root>
 </body>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="1030123864904-clg4pqditg7hfftjk85vfbu4k2dqa3sf.apps.googleusercontent.com">
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 </html>
